--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "core-js": "^3.8.3",
     "css-loader": "^5.0.2",
     "eslint": "^7.19.0",
+    "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "^5.0.0",
     "mini-css-extract-plugin": "^1.3.6",
