--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-cli serve",
     "build": "webpack",
-    "typed": "tcm -w -p 'src/**/*.scss' .",
+    "typed": "tcm -w -p 'src/**/*.css' .",
     "lint": "run-s lint:*",
     "lint:eslint": "eslint ./src",
     "lint:prettier": "prettier ./src --check",
