--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,14 +3,16 @@
         "browser": true,
         "es2021": true
     },
+    "settings": {
+        "react": {
+          "version": "detect"
+        }
+    },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
-        "prettier",
-        "prettier/@typescript-eslint",
-        "prettier/react",
-        "prettier/standard"
+        "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
